cabal-version:      2.4
name:               haskell-dht
version:            0.1.0.0
author:             Matt Joiner
maintainer:         anacrolix@gmail.com
extra-source-files: CHANGELOG.md

executable dht
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base
                  , async
                  , bencode
                  , bytestring
                  , containers
                  , network
                  , optparse-applicative
                  , pretty-simple
                  , random
                  , transformers
  default-language: Haskell2010
