cabal-version:      2.4
name:               haskell-dht
version:            0.1.0.0
author:             Matt Joiner
maintainer:         anacrolix@gmail.com

executable dht
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base
                  , async
                  , bencoding
                  , bytestring
                  , containers
                  , network
                  , optparse-applicative
                  , pretty-simple
                  , random
                  , text
                  , transformers
  default-language: Haskell2010

test-suite test-dht
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: tests
  build-depends:  base, bencoding, hspec
